Hands-on lab/resources/deployment/deploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "languageVersion": "2.0",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.42.1.51946",
      "templateHash": "14463131955365912755"
    }
  },
  "parameters": {
    "azureAdUserId": {
      "type": "string",
      "metadata": {
        "description": "The Id of the Azure AD User."
      }
    },
    "azureAdUserLogin": {
      "type": "string",
      "metadata": {
        "description": "The Login of the Azure AD User (ex: username@domain.onmicrosoft.com)."
      }
    },
    "onpremVMSize": {
      "type": "string",
      "defaultValue": "Standard_D4s_v4",
      "metadata": {
        "description": "The VM size for the virtual machines."
      }
    },
    "sqlMiSku": {
      "type": "string",
      "defaultValue": "GP_Gen5",
      "allowedValues": [
        "GP_Gen4",
        "GP_Gen5"
      ],
      "metadata": {
        "description": "The SKU of the SQL Managed Instance."
      }
    },
    "sqlMiVCores": {
      "type": "int",
      "defaultValue": 4,
      "allowedValues": [
        4,
        8
      ],
      "metadata": {
        "description": "The number of vCores for the SQL Managed Instance."
      }
    },
    "repositoryBranch": {
      "type": "string",
      "defaultValue": "main",
      "metadata": {
        "description": "The branch of the GitHub repository to use for deployment scripts."
      }
    },
    "repositoryName": {
      "type": "string",
      "defaultValue": "techworkshop-L300-secure-workload-migration-to-azure-windows-server---sql-server",
      "metadata": {
        "description": "The name of the GitHub repository containing deployment scripts."
      }
    },
    "repositoryOwner": {
      "type": "string",
      "defaultValue": "microsoft",
      "allowedValues": [
        "microsoft"
      ],
      "metadata": {
        "description": "The owner of the GitHub repository containing deployment scripts."
      }
    },
    "restore": {
      "type": "bool",
      "defaultValue": false,
      "metadata": {
        "description": "Restore the service instead of creating a new instance. This is useful if you previously soft-deleted the service and want to restore it. If you are restoring a service, set this to true. Otherwise, leave this as false."
      }
    }
  },
  "variables": {
    "prefix": "tailspin",
    "suffix": "[take(uniqueString(resourceGroup().id), 6)]",
    "resourceNameBase": "[format('{0}{1}', variables('prefix'), variables('suffix'))]",
    "location": "[resourceGroup().location]",
    "hubNamePrefix": "[format('{0}-hub', variables('resourceNameBase'))]",
    "spokeNamePrefix": "[format('{0}-spoke', variables('resourceNameBase'))]",
    "sqlMiPrefix": "[format('{0}-sqlmi', variables('resourceNameBase'))]",
    "sqlMiStorageName": "[format('{0}sqlmistor', variables('resourceNameBase'))]",
    "onPremPrefix": "[format('{0}-onprem', variables('resourceNameBase'))]",
    "onPremSqlVmPrefix": "[format('{0}-sql', variables('onPremPrefix'))]",
    "openAIName": "[format('{0}-oai', variables('resourceNameBase'))]",
    "gitHubRepo": "[format('{0}/{1}', parameters('repositoryOwner'), parameters('repositoryName'))]",
    "gitHubRepoScriptPath": "Hands-on%20lab/resources/deployment/onprem",
    "gitHubRepoUrl": "[format('https://github.com/{0}/raw/refs/heads/{1}/{2}', variables('gitHubRepo'), parameters('repositoryBranch'), variables('gitHubRepoScriptPath'))]",
    "databaseBackupFile": "database.bak",
    "databaseBackupFileUrl": "[format('{0}/{1}', variables('gitHubRepoUrl'), variables('databaseBackupFile'))]",
    "sqlVmScriptName": "sql-vm-config.ps1",
    "sqlVmScriptArchive": "sql-vm-config.zip",
    "sqlVmScriptArchiveUrl": "[format('{0}/{1}', variables('gitHubRepoUrl'), variables('sqlVmScriptArchive'))]",
    "labUsername": "demouser",
    "labPassword": "demo!pass123",
    "labSqlMiPassword": "demo!pass1234567",
    "tags": {
      "purpose": "tech-workshop",
      "createdBy": "[parameters('azureAdUserLogin')]",
      "SecurityControl": "Ignore"
    }
  },
  "resources": {
    "onprem_vnet": {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}-vnet', variables('onPremPrefix'))]",
      "location": "[variables('location')]",
      "tags": "[variables('tags')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        }
      }
    },
    "onprem_subnet": {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}/{1}', format('{0}-vnet', variables('onPremPrefix')), 'default')]",
      "properties": {
        "addressPrefix": "10.0.0.0/24"
      },
      "dependsOn": [
        "onprem_vnet"
      ]
    },
    "hub_vnet": {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}-vnet', variables('hubNamePrefix'))]",
      "location": "[variables('location')]",
      "tags": "[variables('tags')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.1.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "hub",
            "properties": {
              "addressPrefix": "10.1.0.0/24"
            }
          },
          {
            "name": "AzureBastionSubnet",
            "properties": {
              "addressPrefix": "10.1.1.0/24"
            }
          }
        ]
      }
    },
    "spoke_vnet": {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}-vnet', variables('spokeNamePrefix'))]",
      "location": "[variables('location')]",
      "tags": "[variables('tags')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.2.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "10.2.0.0/24"
            }
          },
          {
            "name": "AzureSqlMI",
            "properties": {
              "addressPrefix": "10.2.1.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', format('{0}-nsg', variables('sqlMiPrefix')))]"
              },
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', format('{0}-rt', variables('sqlMiPrefix')))]"
              },
              "delegations": [
                {
                  "name": "AzureSqlMI",
                  "properties": {
                    "serviceName": "Microsoft.Sql/managedInstances"
                  },
                  "type": "Microsoft.Network/virtualNetworks/subnets/delegations"
                }
              ]
            }
          }
        ]
      },
      "dependsOn": [
        "sqlMi_subnet_nsg",
        "sqlMi_subnet_routetable"
      ]
    },
    "hub_onprem_vnet_peering": {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}/{1}', format('{0}-vnet', variables('hubNamePrefix')), 'hub-onprem')]",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', format('{0}-vnet', variables('onPremPrefix')))]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true
      },
      "dependsOn": [
        "hub_vnet",
        "onprem_vnet"
      ]
    },
    "onprem_hub_vnet_peering": {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}/{1}', format('{0}-vnet', variables('onPremPrefix')), 'onprem-hub')]",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', format('{0}-vnet', variables('hubNamePrefix')))]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true
      },
      "dependsOn": [
        "hub_vnet",
        "onprem_vnet"
      ]
    },
    "hub_spoke_vnet_peering": {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}/{1}', format('{0}-vnet', variables('hubNamePrefix')), 'hub-spoke')]",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', format('{0}-vnet', variables('spokeNamePrefix')))]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true
      },
      "dependsOn": [
        "hub_vnet",
        "spoke_vnet"
      ]
    },
    "spoke_hub_vnet_peering": {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}/{1}', format('{0}-vnet', variables('spokeNamePrefix')), 'spoke-hub')]",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', format('{0}-vnet', variables('hubNamePrefix')))]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true
      },
      "dependsOn": [
        "hub_vnet",
        "spoke_vnet"
      ]
    },
    "spoke_onprem_vnet_peering": {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}/{1}', format('{0}-vnet', variables('spokeNamePrefix')), 'spoke-onprem')]",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', format('{0}-vnet', variables('onPremPrefix')))]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true
      },
      "dependsOn": [
        "onprem_vnet",
        "spoke_vnet"
      ]
    },
    "onprem_spoke_vnet_peering": {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}/{1}', format('{0}-vnet', variables('onPremPrefix')), 'onprem-spoke')]",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', format('{0}-vnet', variables('spokeNamePrefix')))]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true
      },
      "dependsOn": [
        "onprem_vnet",
        "spoke_vnet"
      ]
    },
    "openAI": {
      "type": "Microsoft.CognitiveServices/accounts",
      "apiVersion": "2025-10-01-preview",
      "name": "[variables('openAIName')]",
      "location": "[variables('location')]",
      "kind": "OpenAI",
      "sku": {
        "name": "S0",
        "tier": "Standard"
      },
      "properties": {
        "customSubDomainName": "[variables('openAIName')]",
        "publicNetworkAccess": "Enabled",
        "restore": "[parameters('restore')]"
      },
      "metadata": {
        "description": "Creates an Azure OpenAI resource."
      }
    },
    "deployment": {
      "type": "Microsoft.CognitiveServices/accounts/deployments",
      "apiVersion": "2025-10-01-preview",
      "name": "[format('{0}/{1}', variables('openAIName'), 'text-embedding-ada-002')]",
      "sku": {
        "name": "Standard",
        "capacity": 120
      },
      "properties": {
        "model": {
          "format": "OpenAI",
          "name": "text-embedding-ada-002",
          "version": "2"
        }
      },
      "dependsOn": [
        "openAI"
      ]
    },
    "sqlMi_storage": {
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2025-06-01",
      "name": "[variables('sqlMiStorageName')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "Standard_RAGRS"
      },
      "kind": "StorageV2",
      "properties": {
        "accessTier": "Hot"
      }
    },
    "sqlMi_storage_container": {
      "type": "Microsoft.Storage/storageAccounts/blobServices/containers",
      "apiVersion": "2025-06-01",
      "name": "[format('{0}/default/sql-backup', variables('sqlMiStorageName'))]",
      "properties": {
        "publicAccess": "None"
      },
      "dependsOn": [
        "sqlMi_storage"
      ]
    },
    "sqlMi": {
      "type": "Microsoft.Sql/managedInstances",
      "apiVersion": "2024-11-01-preview",
      "name": "[variables('sqlMiPrefix')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "[parameters('sqlMiSku')]",
        "tier": "GeneralPurpose"
      },
      "identity": {
        "type": "SystemAssigned"
      },
      "properties": {
        "subnetId": "[format('{0}/subnets/AzureSqlMI', resourceId('Microsoft.Network/virtualNetworks', format('{0}-vnet', variables('spokeNamePrefix'))))]",
        "storageSizeInGB": 64,
        "vCores": "[parameters('sqlMiVCores')]",
        "licenseType": "LicenseIncluded",
        "zoneRedundant": false,
        "minimalTlsVersion": "1.2",
        "requestedBackupStorageRedundancy": "Geo",
        "administratorLogin": "[variables('labUsername')]",
        "administratorLoginPassword": "[variables('labSqlMiPassword')]",
        "administrators": {
          "administratorType": "ActiveDirectory",
          "principalType": "User",
          "login": "[parameters('azureAdUserLogin')]",
          "sid": "[parameters('azureAdUserId')]",
          "tenantId": "[subscription().tenantId]",
          "azureADOnlyAuthentication": false
        },
        "databaseFormat": "AlwaysUpToDate"
      },
      "dependsOn": [
        "spoke_vnet"
      ]
    },
    "sqlMiRoleAssignment": {
      "type": "Microsoft.Authorization/roleAssignments",
      "apiVersion": "2022-04-01",
      "name": "[guid(resourceGroup().name, parameters('azureAdUserId'), 'SqlMiContributorRole')]",
      "properties": {
        "roleDefinitionId": "[subscriptionResourceId('Microsoft.Authorization/roleDefinitions', '4939a1f6-9ae0-4e48-a1e0-f2cbe897382d')]",
        "principalId": "[parameters('azureAdUserId')]",
        "principalType": "User"
      }
    },
    "sqlMi_subnet_routetable": {
      "type": "Microsoft.Network/routeTables",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}-rt', variables('sqlMiPrefix'))]",
      "location": "[variables('location')]",
      "properties": {
        "routes": [
          {
            "name": "SqlManagement_0",
            "properties": {
              "addressPrefix": "65.55.188.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_1",
            "properties": {
              "addressPrefix": "207.68.190.32/27",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_2",
            "properties": {
              "addressPrefix": "13.106.78.32/27",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_3",
            "properties": {
              "addressPrefix": "13.106.174.32/27",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_4",
            "properties": {
              "addressPrefix": "13.106.4.96/27",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_5",
            "properties": {
              "addressPrefix": "104.214.108.80/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_6",
            "properties": {
              "addressPrefix": "52.179.184.76/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_7",
            "properties": {
              "addressPrefix": "52.187.116.202/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_8",
            "properties": {
              "addressPrefix": "52.177.202.6/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_9",
            "properties": {
              "addressPrefix": "23.98.55.75/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_10",
            "properties": {
              "addressPrefix": "23.96.178.199/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_11",
            "properties": {
              "addressPrefix": "52.162.107.128/27",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_12",
            "properties": {
              "addressPrefix": "40.74.254.227/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_13",
            "properties": {
              "addressPrefix": "23.96.185.63/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_14",
            "properties": {
              "addressPrefix": "65.52.59.57/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_15",
            "properties": {
              "addressPrefix": "168.62.244.242/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_subnet-10-2-1-0-24-to-vnetlocal",
            "properties": {
              "addressPrefix": "10.2.1.0/24",
              "nextHopType": "VnetLocal"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-Storage",
            "properties": {
              "addressPrefix": "Storage",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-SqlManagement",
            "properties": {
              "addressPrefix": "SqlManagement",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-AzureMonitor",
            "properties": {
              "addressPrefix": "AzureMonitor",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-CorpNetSaw",
            "properties": {
              "addressPrefix": "CorpNetSaw",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-CorpNetPublic",
            "properties": {
              "addressPrefix": "CorpNetPublic",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-AzureActiveDirectory",
            "properties": {
              "addressPrefix": "AzureActiveDirectory",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-AzureCloud.northcentralus",
            "properties": {
              "addressPrefix": "AzureCloud.northcentralus",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-AzureCloud.southcentralus",
            "properties": {
              "addressPrefix": "AzureCloud.southcentralus",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-Storage.northcentralus",
            "properties": {
              "addressPrefix": "Storage.northcentralus",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-Storage.southcentralus",
            "properties": {
              "addressPrefix": "Storage.southcentralus",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-EventHub.northcentralus",
            "properties": {
              "addressPrefix": "EventHub.northcentralus",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-EventHub.southcentralus",
            "properties": {
              "addressPrefix": "EventHub.southcentralus",
              "nextHopType": "Internet"
            }
          }
        ]
      }
    },
    "sqlMi_subnet_nsg": {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}-nsg', variables('sqlMiPrefix'))]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow_tds_inbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_redirect_inbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "11000-11999",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_geodr_inbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5022",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "10.2.1.0/24",
              "access": "Allow",
              "priority": 1200,
              "direction": "Inbound"
            }
          },
          {
            "name": "deny_all_inbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4096,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_linkedserver_outbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1000,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow_redirect_outbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "11000-11999",
              "sourceAddressPrefix": "10.2.1.0/24",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1100,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow_geodr_outbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5022",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1200,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow_privatelink_outbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1300,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow_azurecloud_outbound",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1400,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "deny_all_outbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4096,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-sqlmgmt-in-10-2-1-0-24-v10",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "SqlManagement",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "destinationPortRanges": [
                "9000",
                "9003",
                "1438",
                "1440",
                "1452"
              ]
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-corpsaw-in-10-2-1-0-24-v10",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "CorpNetSaw",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound",
              "destinationPortRanges": [
                "9000",
                "9003",
                "1440"
              ]
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-corppublic-in-10-2-1-0-24-v10",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "CorpNetPublic",
              "destinationAddressPrefix": "10.2.1.0/24",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "9000",
                "9003"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-healthprobe-in-10-2-1-0-24-v10",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "10.2.1.0/24",
              "access": "Allow",
              "priority": 103,
              "direction": "Inbound"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-internal-in-10-2-1-0-24-v10",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "10.2.1.0/24",
              "destinationAddressPrefix": "10.2.1.0/24",
              "access": "Allow",
              "priority": 104,
              "direction": "Inbound"
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-services-out-10-2-1-0-24-v10",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.2.1.0/24",
              "destinationAddressPrefix": "AzureCloud",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound",
              "destinationPortRanges": [
                "443",
                "12000"
              ]
            }
          },
          {
            "name": "Microsoft.Sql-managedInstances_UseOnly_mi-internal-out-10-2-1-0-24-v10",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "10.2.1.0/24",
              "destinationAddressPrefix": "10.2.1.0/24",
              "access": "Allow",
              "priority": 101,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    "bastion": {
      "type": "Microsoft.Network/bastionHosts",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}-bastion', variables('hubNamePrefix'))]",
      "location": "[variables('location')]",
      "tags": "[variables('tags')]",
      "sku": {
        "name": "Basic"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "IpConf",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('{0}-bastion-pip', variables('hubNamePrefix')))]"
              },
              "subnet": {
                "id": "[format('{0}/subnets/AzureBastionSubnet', resourceId('Microsoft.Network/virtualNetworks', format('{0}-vnet', variables('hubNamePrefix'))))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "bastion_public_ip",
        "hub_vnet"
      ]
    },
    "bastion_public_ip": {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}-bastion-pip', variables('hubNamePrefix'))]",
      "location": "[variables('location')]",
      "tags": "[variables('tags')]",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static"
      }
    },
    "onprem_sql_vm": {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2025-04-01",
      "name": "[format('{0}-vm', variables('onPremSqlVmPrefix'))]",
      "location": "[variables('location')]",
      "tags": "[variables('tags')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('onpremVMSize')]"
        },
        "additionalCapabilities": {
          "hibernationEnabled": false
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "fromImage"
          },
          "imageReference": {
            "publisher": "MicrosoftSQLServer",
            "offer": "SQL2019-WS2022",
            "sku": "Standard",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-nic', variables('onPremSqlVmPrefix')))]"
            }
          ]
        },
        "osProfile": {
          "computerName": "SqlServer",
          "adminUsername": "[variables('labUsername')]",
          "adminPassword": "[variables('labPassword')]"
        }
      },
      "dependsOn": [
        "onprem_sql_nic"
      ]
    },
    "onprem_sql_nsg": {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}-nsg', variables('onPremSqlVmPrefix'))]",
      "location": "[variables('location')]",
      "tags": "[variables('tags')]",
      "properties": {
        "securityRules": [
          {
            "name": "SQL-Inbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "10.2.1.0/24",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "SQL-Outbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "10.2.1.0/24",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound"
            }
          },
          {
            "name": "AG-Endpoint-Inbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "5022",
              "sourceAddressPrefix": "10.2.1.0/24",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "AG-Endpoint-Outbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "5022",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "10.2.1.0/24",
              "access": "Allow",
              "priority": 130,
              "direction": "Outbound"
            }
          },
          {
            "name": "TDS-Redirect-Outbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "11000-11999",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "10.2.1.0/24",
              "access": "Allow",
              "priority": 140,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    "onprem_sql_nic": {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2025-01-01",
      "name": "[format('{0}-nic', variables('onPremSqlVmPrefix'))]",
      "location": "[variables('location')]",
      "tags": "[variables('tags')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', format('{0}-vnet', variables('onPremPrefix')), 'default')]"
              },
              "privateIPAllocationMethod": "Dynamic"
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', format('{0}-nsg', variables('onPremSqlVmPrefix')))]"
        }
      },
      "dependsOn": [
        "onprem_sql_nsg",
        "onprem_subnet"
      ]
    },
    "onprem_sql_vm_ext": {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2025-04-01",
      "name": "[format('{0}/{1}', format('{0}-vm', variables('onPremSqlVmPrefix')), 'SqlVmConfig')]",
      "location": "[variables('location')]",
      "tags": "[variables('tags')]",
      "properties": {
        "publisher": "Microsoft.Powershell",
        "type": "DSC",
        "typeHandlerVersion": "2.9",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "configuration": {
            "url": "[variables('sqlVmScriptArchiveUrl')]",
            "script": "[variables('sqlVmScriptName')]",
            "function": "Main"
          },
          "configurationArguments": {
            "DbBackupFileUrl": "[variables('databaseBackupFileUrl')]",
            "DatabasePassword": "[variables('labPassword')]"
          }
        }
      },
      "dependsOn": [
        "onprem_sql_vm"
      ]
    }
  }
}
